Регистрация на занятие, просмотр модального окна